src/index.css
@import "tailwindcss";

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Poppins", sans-serif;
  color: gainsboro;
  font-weight: 600;
  letter-spacing: 1px;
}

/* Global start */
:root {
  --primary-color: #ff004f;
  --text-color: gainsboro;
}

html {
  scroll-behavior: smooth;
}

body {
  background-color: #080808;
  color: var(--text-color);
  overflow-y: auto;
}

body::-webkit-scrollbar {
  display: none;
}

a {
  text-decoration: none;
}

.container {
  padding: 50px 5%;
  width: 100%;
  height: 100%;
}

section:nth-child(even) {
  background-color: rgb(19, 19, 19);
}

.section-title {
  font-size: 35px;
  font-weight: 800;
  letter-spacing: 2px;
  margin-bottom: 35px;
}

.btn {
  display: block;
  font-size: 15px;
  margin-top: 20px;
  width: fit-content;
  border: 2px solid transparent;
  background-color: var(--primary-color);
  padding: 10px 40px;
  border-radius: 10px;
  text-decoration: none;
  color: #fff;
  cursor: pointer;
  transition:
    all 0.4s,
    transform 0.5s;
}
.btn:hover {
  background-color: transparent;
  border: 2px solid var(--primary-color);
  transform: translateY(-3px);
}
/* Global start */

/* Header start */
header {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  z-index: 99;
}

header .container {
  padding: 10px 5%;
}

nav {
  display: flex;
  align-items: center;
  justify-content: space-between;
  align-items: center;
}
.logo {
  width: 50px;
  height: auto;
  border-radius: 50%;
  border: 2px solid white;
}

nav ul li {
  display: inline-block;
  margin: 10px 20px;
  list-style: none;
}

nav ul li a {
  color: gainsboro;
  text-decoration: none;
  font-size: 20px;
  position: relative;
  letter-spacing: 2px;
  font-weight: bold;
}

nav ul li a::after {
  content: "";
  width: 0;
  height: 3px;
  border-radius: 10%;
  background: var(--primary-color);
  position: absolute;
  left: 0;
  bottom: -6px;
  transition: 0.5s;
}

nav ul li a:hover::after {
  width: 100%;
}
nav .fa {
  display: none;
  cursor: pointer;
}
/* Header start */

/* Hero-section start */
#home {
  width: 100%;
  height: 100vh;
  background-image: url("/images/hero image.avif");
  background-attachment: fixed;
  background-size: cover;
  background-position: bottom right;
  background-repeat: no-repeat;
}

#home .overlay {
  background-color: rgba(0, 0, 0, 0.7);
  height: 100%;
  padding-top: 77px;
}

#home .container {
  padding: 0 5%;
}

#home .row {
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-wrap: wrap;
  width: 100%;
  height: 100%;
}
#home .row .left {
  flex-basis: 50%;
}

#home .row .left h1 {
  color: #b54769;
  color: white;
  letter-spacing: 3px;
  font-size: 18px;
}
#home .row .left h1 span {
  color: var(--primary-color);
  font-weight: 1000;
  font-size: 18px;
}

#home .row .left h2 {
  font-size: 55px;
  font-weight: 800;
  color: gainsboro;
  letter-spacing: 4px;
}

#home .left p {
  font-size: 16px;
  font-weight: 600;
}

#home .right {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-basis: 35%;
}

#home .right img {
  width: 100%;
  will-change: transform;
  animation-name: move;
  animation-duration: 8s;
  animation-timing-function: ease-in-out;
  animation-iteration-count: infinite;
}

@keyframes move {
  0% {
    transform: translateX(0);
  }
  25% {
    transform: translateX(-30px);
  }
  50% {
    transform: translateX(0);
  }
  75% {
    transform: translateX(30px);
  }
  100% {
    transform: translateX(0);
  }
}
/* Hero-section end */

/*-------------about-section start--------------*/
#about {
  color: #ababab;
  letter-spacing: 1px;
}

#about .section-title {
  margin-bottom: 5px;
}
#about .row {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  align-items: center;
}
#about .left {
  flex-basis: 30%;
}
#about .left img {
  width: 100%;
  background: grey;
  background-color: #131313;
  border-radius: 5%;
  box-shadow: -10px 10px 20px var(--primary-color);
}

#about .right {
  flex-basis: 65%;
}

#about .right .para {
  font-size: 13px;
  text-align: justify;
}
.tab-titles {
  display: flex;
  margin: 15px 0 15px;
}

.tab-links {
  margin-right: 50px;
  font-size: 19px;
  font-weight: bold;
  cursor: pointer;
  position: relative;
}
.tab-links::after {
  content: "";
  width: 0;
  height: 3px;
  border-radius: 10%;
  background: var(--primary-color);
  position: absolute;
  left: 0;
  bottom: -8px;
  transition: 0.5s;
}
.tab-links.active-link::after {
  width: 50%;
}
.tab-contents ul li {
  list-style: none;
  margin: 10px 0;
  font-size: 14px;
  font-weight: 550;
}
.tab-contents ul li span {
  font-weight: bold;
  color: var(--primary-color);
  margin-bottom: 15px;
}
.tab-contents ul li .duration {
  font-weight: 600;
  color: #fff;
  font-size: 13px;
}
.tab-contents {
  display: none;
}
.tab-contents.active-tab {
  display: block;
}
/* about-section end */

/*-----------Services-section-start-------*/

.services-list {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  grid-gap: 30px;
  margin: 30px 0;
}

.services-list .service {
  background: #262626;
  padding: 25px;
  font-size: 13px;
  font-weight: 300;
  border-radius: 10px;
  letter-spacing: 1px;
  cursor: pointer;
  transition: all 0.3s ease-in-out;
}

.services-list .service:hover {
  transform: translateY(-8px);
  background: var(--primary-color);
}

.services-list .service span {
  font-size: 40px;
  margin-bottom: 30px;
}
.services-list .service h3 {
  font-size: 20px;
  font-weight: 800;
  margin-bottom: 15px;
}
.services-list .service p {
  font-size: 14px;
}
.services-list .service a {
  text-decoration: none;
  margin-top: 30px;
  color: white;
  font-size: 15px;
}
/*-----------Services-section-end-------*/

/*-----------Projects-section-start-------*/
.project-list {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
  gap: 40px;
  margin: 50px 0;
}

.project-list .project {
  position: relative;
  border-radius: 10px;
  overflow: hidden;
  height: 250px; /* 🔥 fixed height */
}

.project-list .project img {
  width: 100%;
  height: 100%;
  object-fit: cover; /* 🔥 very important */
  display: block;
  transition: transform 0.5s;
}
.project .layer {
  width: 100%;
  height: 0;
  background: linear-gradient(rgba(0, 0, 0, 0.6), var(--primary-color));
  border-radius: 10px;
  position: absolute;
  left: 0;
  bottom: 0;
  overflow: hidden;
  display: flex;
  align-items: center;
  justify-content: space-around;
  flex-direction: column;
  text-align: center;
  padding: 0 10px;
  transition: height 0.4s;
}
.project .layer h3 {
  font-size: 20px;
}
.project .layer p {
  font-size: 14px;
}
.project .layer a {
  color: var(--primary-color);
  text-decoration: none;
  font-size: 25px;
  background: #fff;
  line-height: 50px;
  width: 50px;
  height: 50px;
  border-radius: 50%;
  text-align: center;
}
.project .layer a i {
  color: var(--primary-color);
}
.project:hover img {
  transform: scale(1.1);
}
.project:hover .layer {
  height: 100%;
}
/*-----------Projects-section-end-------*/

/*-----------contact-section start-------*/
#contact .row {
  display: flex;
  justify-content: space-between;
  align-items: start;
}
#contact .left {
  flex-basis: 50%;
}
#contact .right {
  flex-basis: 60%;
}
#contact .left ul {
  margin-bottom: 30px;
}
#contact .left ul li {
  list-style: none;
  margin-bottom: 30px;
}
#contact .left li i {
  margin-right: 15px;
  color: var(--primary-color);
  font-size: 25px;
}
.social-icons {
  margin-top: 30px;
}
#contact .left .social-icons a i {
  text-decoration: none;
  font-size: 30px;
  color: #ababab;
  margin-right: 15px;
  display: inline-block;
  transition:
    transform 0.5s,
    color 0.3s;
}
#contact .left .social-icons i:hover {
  color: var(--primary-color);
  transform: translateY(-5px);
}

form input,
form textarea {
  width: 100%;
  border: 0;
  outline: none;
  background: #262626;
  padding: 12px;
  margin-bottom: 20px;
  border-radius: 7px;
  color: #fff;
  font-size: 18px;
  letter-spacing: 1px;
}
textarea {
  margin-bottom: 0 !important;
}
/*-----------contact-section end-------*/

/*-----------footer-section start------*/
.copyright {
  /* width: 100%; */
  text-align: center;
  padding: 5px 0;
  background: #262626;
}
.copyright p {
  letter-spacing: 1px;
  font-size: 15px;
}
/*-----------footer-section end------*/

/*-----------Media queries for mobile device start-------*/
@media only screen and (max-width: 600px) {
  .container {
    padding: 30px 15px;
  }
  .btn {
    font-size: 14px !important;
    border: 1px solid var(--primary-color) !important;
    padding: 7px 25px !important;
    margin-top: 20px !important;
  }
  .section-title {
    font-size: 25px;
    letter-spacing: 1px;
  }
  header {
    background-position: center;
  }
  header .logo {
    width: 50px;
  }
  nav .fa {
    display: block;
    font-size: 25px;
    padding: 2px;
    margin-left: auto;
  }
  nav ul {
    background: var(--primary-color);
    position: fixed;
    top: 0;
    right: -200px;
    width: 200px;
    height: 100vh;
    padding-top: 50px;
    z-index: 2;
    transition: right 0.4s ease-in-out;
  }
  nav ul li {
    display: block;
    margin: 15px;
  }
  nav ul .fa {
    position: absolute;
    top: 28px;
    right: 25px;
    cursor: pointer;
  }

  #home {
    background-position: bottom left;
    height: 100%;
  }

  #home .row {
    padding: 25px 0;
    text-align: center;
    justify-content: space-between;
    flex-direction: column-reverse;
  }
  #home .row .left {
    margin-top: 10px;
  }

  #home .row .left h1 {
    letter-spacing: 1px;
    font-size: 13px;
  }

  #home .row .left h1 span {
    font-size: 15px;
  }

  #home .row .left h2 {
    font-size: 30px;
    color: gainsboro;
    letter-spacing: 1px;
  }
  #home .left p {
    font-size: 15px;
    font-weight: 500;
  }
  #home .btn {
    margin: auto;
  }
  #home .right img {
    max-width: 280px;
  }

  #about .left {
    margin-top: 20px;
    flex-basis: 100%;
    margin-bottom: 25px;
  }
  #about .right {
    flex-basis: 100%;
    font-size: 14px;
  }
  .tab-links {
    font-size: 16px;
    margin-right: 30px;
  }
  #projects .project-list {
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  }
  #contact .row {
    flex-wrap: wrap;
    flex-direction: column-reverse;
  }
  #contact .left {
    margin: 30px 0;
  }

  #contact .left,
  #contact .right {
    flex-basis: 100%;
    margin-bottom: 20px;
  }

  .copyright {
    font-size: 15px;
    padding: 10px;
  }
}
/*-----------Media queries for mobile device start-------*/

